Fix black line beneath nav on mobile

--- a/app/theme.scss
+++ b/app/theme.scss
@@ -46,7 +46,7 @@ h1:first-child {
  */
 
 .usa-header--dark .usa-navbar {
-  border-bottom-color: color('ink');
+  border-bottom-width: 0;
 }
 
 /*
